# OSVR-SharedIMU

./: .gitignore  CMakeLists.txt  README.md  com_motionreality_OSVR_NetPlugin.cpp  com_motionreality_OSVR_NetPlugin.json  com_motionreality_OSVR_SharedIMU.cpp  osvr_server_config.json
HIDAPI/: hid.cpp
